force-app/main/default/objects/CPQ_Product_Rule_Table_Nested_Product__c/CPQ_Product_Rule_Table_Nested_Product__c.object-meta.xml
<CustomObject>
    <description>SOX object - The configuration stored here helps hiding or showing the V1 products on the UI for Sales Rep.</description>
    <label>CPQ Product Rule Table - Nested Product</label>
    <nameField>
        <displayFormat>PRNT-{000000}</displayFormat>
        <label>CPQ Product Rule Table - Nested Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ Product Rule Table - Nested Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>