force-app/main/default/objects/CPQ_Product_Rule_Table_Nested_Product__c/fields/EligibleRecordsforAccountAddONVisibilty__c.field-meta.xml
<CustomField>
    <fullName>EligibleRecordsforAccountAddONVisibilty__c</fullName>
    <description>This Checkbox is very specific to filter lookup queries data based on specific product rules only 
Product Rule : Lookup Table Account Addon Visibility</description>
    <inlineHelpText>This Checkbox is very specific to filter lookup queries data based on specific product rules only 
Product Rule : Lookup Table Account Addon Visibility</inlineHelpText>
    <label>EligibleRecordsforAccountAddONVisibilty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>