force-app/main/default/objects/CPQ_Product_Rule_Table_Nested_Product__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Use for data migration</description>
    <externalId>true</externalId>
    <inlineHelpText>Use for data migration</inlineHelpText>
    <label>ExternalId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>