force-app/main/default/objects/CPQ_Product_Rule_Table_Nested_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CPQ Product Rule Table - Nested Products</relationshipLabel>
    <relationshipName>CPQ_Product_Rule_Table_Nested_Products</relationshipName>
    <type>Lookup</type>
</CustomField>