force-app/main/default/objects/CPQ_Product_Rule_Table_Nested_Product__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
            <value>
                <fullName>Enable</fullName>
            </value>
            <value>
                <fullName>Disable</fullName>
            </value>
            <value>
                <fullName>Enable &amp; Add</fullName>
            </value>
            <value>
                <fullName>Disable &amp; Remove</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Show &amp; Add</fullName>
            </value>
            <value>
                <fullName>Hide &amp; Remove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>