force-app/main/default/objects/CPQ_Product_Rule_Table_Nested_Product__c/fields/Unique_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Unique_Criteria__c</fullName>
    <description>For filter data validation</description>
    <formula>TEXT (  Licensing_Model__c ) &amp;&quot;#&quot;&amp; TEXT ( Rubrik_Suite__c ) &amp;&quot;#&quot;&amp; TEXT (   Support_Type__c ) &amp;&quot;#&quot;&amp; TEXT (   Payment_Options__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For filter data validation</inlineHelpText>
    <label>Unique Criteria</label>
    <type>Text</type>
</CustomField>