force-app/main/default/objects/CPQ_Product_Rule_Table_Nested_Product__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <description>Sanity check so not to duplicate the data</description>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>