force-app/main/default/objects/CPQ_Product_Rule_Table_Nested_Product__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <description>Unique Name for Data Migration</description>
    <formula>Product__r.ProductCode &amp;&quot;#&quot;&amp; TEXT(Licensing_Model__c) &amp;&quot;#&quot;&amp; TEXT(Payment_Options__c) &amp;&quot;#&quot;&amp; IF(Required__c,&quot;TRUE&quot;,&quot;FALSE&quot;) &amp;&quot;#&quot;&amp; TEXT(Rubrik_Suite__c) &amp;&quot;#&quot;&amp; TEXT(Support_Type__c) &amp;&quot;#&quot;&amp; TEXT(Type__c)</formula>
    <inlineHelpText>Unique Name for Data Migration</inlineHelpText>
    <label>Unique Name</label>
    <type>Text</type>
</CustomField>